syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ritchieridanko/pasarly/backend/auth-service/internal/app/events/v1;events";

message AuthCreated {
  string email = 1;
  string token = 2;
  google.protobuf.Timestamp created_at = 3;
}
